--- a/flex/PortableControlApplication/.project
+++ b/flex/PortableControlApplication/.project
@@ -19,7 +19,7 @@
 		<link>
 			<name>[source path] src</name>
 			<type>2</type>
-			<locationURI>DOCUMENTS/SemanticComponent/src</locationURI>
+			<locationURI>DOCUMENTS/sCore/src</locationURI>
 		</link>
 	</linkedResources>
 </projectDescription>
